# simulator_ubuntu

./: .gitignore  .gitmodules  LICENSE  README.md  bitbucket-pipelines.yml
car_description/: CMakeLists.txt  package.xml
car_description/launch/: robot_state_publisher.launch
car_description/meshes/: Body_LOD0.stl  BrakeFrontLeft_LOD0.stl  BrakeFrontRight_LOD0.stl  BrakeLights_LOD0.stl  BrakeRearLeft_LOD0.stl  BrakeRearRight_LOD0.stl  DayTimeLight_LOD0.stl  FogLight_LOD0.stl  FrontLightLeft_LOD0.stl  FrontLightRight_LOD0.stl  Interior_LOD0.stl  Light_LOD0.stl  MainLight_LOD0.stl  Mesh.stl  Paint_LOD0.stl  PlateBackTypeEU_LOD0.stl  PlateFrontTypeEU_LOD0.stl  RearLights_LOD0.stl  RearReflectors_LOD0.stl  ReflectorsLeft_LOD0.stl  ReflectorsRight_LOD0.stl  SteeringWheel_LOD0.stl  TurnLightRearLeft_LOD0.stl  TurnLightRearRight_LOD0.stl  WheelFrontLeft_LOD0.stl  WheelFrontRight_LOD0.stl  WheelRearLeft_LOD0.stl  WheelRearRight_LOD0.stl  Windows_LOD0.stl  WipersLeft_LOD0.stl  WipersRight_LOD0.stl
car_description/urdf/: EgoVehicle.urdf
cruise_control/: CMakeLists.txt  package.xml
cruise_control/cfg/: CruiseController.cfg
cruise_control/include/cruise_controller/: cruise_controller.h
cruise_control/launch/: cruise_control.launch
cruise_control/src/cruise_controller/: cruise_controller.cpp  cruise_controller_node.cpp
hska_adas/: CMakeLists.txt  package.xml
hska_adas/configs/: adas_visualization.rviz  car_visualization.rviz
hska_adas/launch/: adas_cc.launch  adas_full.launch  adas_lkas.launch  car.launch  rosbridge.launch
hska_msgs/: CMakeLists.txt  package.xml
hska_msgs/msg/: ADASCommand.msg  LaneBoundary.msg  LaneBoundaryArray.msg  PedalCommand.msg  SteeringCommand.msg  WheelRotationalSpeed.msg
lane_changing/: CMakeLists.txt  package.xml
lane_changing/cfg/: LaneChanger.cfg
lane_changing/include/lane_changer/: lane_changer.h
lane_changing/launch/: lane_changing.launch
lane_changing/src/lane_changer/: lane_changer.cpp  lane_changer_node.cpp
lane_detection/: CMakeLists.txt  package.xml
lane_detection/cfg/: LaneDetector.cfg  LaneVisualizer.cfg
lane_detection/include/: peak_finder.h  poly_fit.h
lane_detection/include/lane_detector/: lane_detector.h
lane_detection/include/lane_visualizer/: lane_visualizer.h
lane_detection/launch/: lane_detection.launch
lane_detection/src/: peak_finder.cpp  poly_fit.cpp
lane_detection/src/lane_detector/: lane_detector.cpp  lane_detector_node.cpp
lane_detection/src/lane_visualizer/: lane_visualizer.cpp  lane_visualizer_node.cpp
localization/: CMakeLists.txt  package.xml
localization/cfg/: FakeLocalizer.cfg
localization/include/fake_localizer/: fake_localizer.h
localization/launch/: localization.launch
localization/src/fake_localizer/: fake_localizer.cpp  fake_localizer_node.cpp
package_name/: CMakeLists.txt  package.xml
package_name/cfg/: Node1Name.cfg  Node2Name.cfg
package_name/include/node1_name/: node1_name.h
package_name/include/node2_name/: node2_name.h
package_name/launch/: package_name.launch
package_name/src/node1_name/: node1_name.cpp  node1_name_node.cpp
package_name/src/node2_name/: node2_name.cpp  node2_name_node.cpp
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/cfg/: PurePursuit.cfg  PurePursuitVisualizer.cfg
pure_pursuit/include/pure_pursuit/: pure_pursuit.h
pure_pursuit/include/pure_pursuit_visualizer/: pure_pursuit_visualizer.h
pure_pursuit/launch/: pure_pursuit.launch
pure_pursuit/src/pure_pursuit/: pure_pursuit.cpp  pure_pursuit_node.cpp
pure_pursuit/src/pure_pursuit_visualizer/: pure_pursuit_visualizer.cpp  pure_pursuit_visualizer_node.cpp
