<?xml version="1.0"?>
<package format="2">

    <name>cruise_control</name>
    <version>1.0.0</version>
    <description>Cruise Controller for Vehicle Velocity</description>
    <maintainer email="maan1044@hs-karlsruhe.de">anna</maintainer>
    <license>MIT</license>

    <author>Anna-Lena Marmein</author>
    <author>Magdalena Kugler</author>
    <author>Yannick Rauch</author>
    <author>Markus Zimmermann</author>
    <author>Patrick Rebling</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend> geometry_msgs </depend>
    <depend> std_msgs </depend>
    <depend> roscpp </depend>
    <depend> dynamic_reconfigure </depend>
    <depend> hska_msgs </depend>

</package>

