<?xml version="1.0"?>
<package format="2">

    <name>lane_detection</name>
    <version>1.0.0</version>
    <description>Lane Detection with Computer Vision Algorithms</description>
    <maintainer email="repa1030@hs-karlsruhe.de">Patrick Rebling</maintainer>
    <license>MIT</license>

    <author>Anna-Lena Marmein</author>
    <author>Magdalena Kugler</author>
    <author>Yannick Rauch</author>
    <author>Markus Zimmermann</author>
    <author>Patrick Rebling</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>image_transport</depend>
    <depend>cv_bridge</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>hska_msgs</depend>

</package>
